--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,12 @@
     ],
     "routes": [
       {
+        "src": "/admin/(.*)",
+        "dest": "/api/admin"
+      },
+      {
         "src": "/api/(.*)",
-        "dest": "/api/$1.js"
+        "dest": "/api/$1"
       }
     ]
   }
